@startuml Clases
skinparam classAttributeIconSize 0
'class Juego {
'-ronda: Ronda
'-jugador: Jugador
'-tienda: Tienda
'-mazo: Mazo
'-panel: Panel
'+Juego()
'}

class Jugador {
-puntaje: Puntaje
+tirarMano(): Puntaje
+descartar()
+seleccionarCarta(Carta)
+deseleccionarCarta(Carta)
}

class Mano {
-maxCartas: int
-cartas: List<Carta>
+agregarCarta(Carta)
+quitarCarta(Carta): Carta
+obtenerCartas(): List<Carta>
}

class CartasSeleccionadas {
-juego: Juego
+tirarMano(jokers: ManoDeJokers): Puntaje
+puntuarMano(): Puntaje
+descartar()
}

class ManoDeJokers {
-jokers: List<Joker>
+cambiarOrden(pos1, pos2: int)
+agregarJoker(Joker)
+quitarJoker(Joker) : Joker
}

Jugador --> Mano: "tiene"
Jugador --> CartasSeleccionadas: "tiene"
Jugador --> ManoDeJokers: "tiene"
CartasSeleccionadas --|> Mano
@enduml